Implemented baseline model for evaluation of training results

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -23,19 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import Counter\n",
-    "from matplotlib import pyplot"
+    "from matplotlib import pyplot as py\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.dummy import DummyClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +764,7 @@
        "29   United-States   <=50K  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +789,7 @@
        "32561"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,12 +809,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "remove '?' in data (4.262 occurances)"
+    "### remove '?' in data (4.262 occurances)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +823,7 @@
        "(30162, 15)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,12 +846,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Summarize class distribution"
+    "### Summarize class distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -868,15 +872,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize distribution of each numerical input variable by histograms"
+    "### Visualize distribution of each numerical input variable by histograms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +900,14 @@
     "numeric_columns = df.select_dtypes(include=['int64', 'float64']).columns\n",
     "subset = df[numeric_columns]\n",
     "subset.hist()\n",
-    "pyplot.show()"
+    "py.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Add explanation of histograms"
    ]
   },
   {
@@ -915,10 +926,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = np.asarray(df.loc[:, 'Class'])\n",
+    "X = np.asarray(df.iloc[:, :-1])"
+   ]
   },
   {
    "cell_type": "code",
@@ -943,24 +957,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Define baseline model for evaluation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Accuracy: 0.751 (0.000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_model = DummyClassifier(strategy=\"most_frequent\")\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "scores = cross_val_score(baseline_model, X, y, scoring=\"accuracy\", cv=cv, n_jobs=1)\n",
+    "print(\"Mean Accuracy: %.3f (%.3f)\" % (np.mean(scores), np.std(scores)))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We have now a baseline model to evaluate the performance of the other models. If a model has an accuracy >= 75,2% it has skill. Otherwise the models are not suited for the census income dataset."
+   ]
   }
  ],
  "metadata": {
